gitops/apps/simple-time-service/overlays/prod/patch-prod.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: simple-time-service
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: simple-time-service
          # Prod uses a specific, tested release image tag
          image: karthikbm2k25/simple-time-service:1.1.2
